refactor properties mounting to not be a step and include test for remote file mounting via spark-submit